<resources>
    <string name="app_name">Gamesss</string>
    <string name="game_image">Game Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_list">DISCOVER GAMES</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="result">RESULT</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="section_title_about">ABOUT</string>
    <string name="section_title_website">WEBSITE</string>
    <string name="section_title_platforms">PLATFORMS</string>
    <string name="section_title_developers">DEVELOPERS</string>
    <string name="section_title_publishers">PUBLISHERS</string>
</resources>