<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.miko.gamesss.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_detailActivity"
            app:destination="@id/detailActivity" />

    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.miko.gamesss.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_searchFragment_to_detailActivity"
            app:destination="@id/detailActivity" />

    </fragment>

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.miko.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        app:moduleName="favorite"
        tools:layout="@layout/fragment_favorite">

        <action
            android:id="@+id/action_favoriteFragment_to_detailActivity"
            app:destination="@id/detailActivity" />

    </fragment>

    <fragment
        android:id="@+id/browseFragment"
        android:name="com.miko.browse.BrowseFragment"
        android:label="Browse"
        app:moduleName="browse"
        tools:layout="@layout/fragment_browse">
        <action
            android:id="@+id/action_browseFragment2_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <activity
        android:id="@+id/detailActivity"
        android:name="com.miko.gamesss.detail.DetailActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail">

        <argument
            android:name="gameId"
            android:defaultValue="0"
            app:argType="integer" />

    </activity>

</navigation>